# aiohttp-catcher

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  publish.yml
aiohttp_catcher/: __init__.py  catcher.py  scenario.py
aiohttp_catcher/canned/: __init__.py  aiohttp_errors.py
scripts/: extract_coverage.py
tests/: conftest.py  test_catcher.py
