[tool.poetry]
name = "aiohttp-catcher"
version = "0.1.0"
description = "A centralized error handler for aiohttp servers"
authors = ["Yuvi Herziger <yherziger@immuta.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
